# PCAP-Feature-Extractor

./: .gitignore  README.md  pyproject.toml
data/: SAT-03-11-2018_0.csv  SAT-03-11-2018_0.pcap
notebooks/: PCAP-feature-extractor.ipynb
src/pcap_features/: cli.py  constants.py  flow.py  flow_session.py  main.py  sniffer.py  utils.py
src/pcap_features/writter/: __init__.py  csv_writer.py  factory.py  output_writer.py
