[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcap_features"
version = "0.1.0"
description = "PCAP Feature Extractor"
dependencies = [
    "scapy",
    "numpy",
    "scipy",
]
requires-python = ">=3.12"

[project.scripts]
pcap_features = "pcap_features.main:main"
